# swiftsc-lsp

./: CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs  lsp.rs  main.rs
