[package]
name = "swiftsc-lsp"
version = "1.0.2-beta"
edition = "2021"
authors = ["SwiftSC-Lang Contributors"]
description = "Language Server Protocol implementation for SwiftSC-Lang"
license = "MIT"
repository = "https://github.com/swiftsc-lang/swiftsc-lsp"

[dependencies]
swiftsc-frontend = { version = "1.0.2-beta", path = "../swiftsc-compiler/frontend" }
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
